<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:ems="10"
        android:editable="false"
        android:gravity="right|bottom"
        android:id="@+id/editText"
        android:text="0"
        android:background="@drawable/white_selector"/>
    <LinearLayout
        android:layout_below="@id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/L_Row1">
        <Button
           android:layout_width="80dp"
            android:layout_height="60dp"
            android:text="@string/btn_clear"
            android:id="@+id/btn_clear"
            android:gravity="center"
            android:background="@drawable/white_selector"
            />

        <Button
           android:layout_width="80dp"
            android:layout_height="60dp"
            android:text="@string/btn_del"
            android:id="@+id/btn_del"
            android:gravity="center"
            android:background="@drawable/white_selector"
            android:layout_marginLeft="10dp"
            />

        <Button
           android:layout_width="80dp"
            android:layout_height="60dp"
            android:text="@string/btn_div"
            android:id="@+id/btn_div"
            android:gravity="center"
            android:background="@drawable/white_selector"
            android:layout_marginLeft="10dp"
            />

        <Button
           android:layout_width="70dp"
            android:layout_height="60dp"
            android:text="@string/btn_multi"
            android:id="@+id/btn_multi"
            android:gravity="center"
            android:background="@drawable/white_selector"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_below="@id/L_Row1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/L_Row2"
        android:layout_marginTop="10dp">
        <Button
           android:layout_width="80dp"
            android:layout_height="60dp"
            android:text="@string/btn_7"
            android:id="@+id/btn_7"
            android:gravity="center"
            android:background="@drawable/white_selector"
            />

        <Button
           android:layout_width="80dp"
            android:layout_height="60dp"
            android:text="@string/btn_8"
            android:id="@+id/btn_8"
            android:gravity="center"
            android:background="@drawable/white_selector"
            android:layout_marginLeft="10dp"
            />

        <Button
           android:layout_width="80dp"
            android:layout_height="60dp"
            android:text="@string/btn_9"
            android:id="@+id/btn_9"
            android:gravity="center"
            android:background="@drawable/white_selector"
            android:layout_marginLeft="10dp"
            />

        <Button
           android:layout_width="70dp"
            android:layout_height="60dp"
            android:text="@string/btn_sub"
            android:id="@+id/btn_sub"
            android:gravity="center"
            android:background="@drawable/white_selector"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_below="@id/L_Row2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/L_Row3"
        android:layout_marginTop="10dp">
        <Button
           android:layout_width="80dp"
            android:layout_height="60dp"
            android:text="@string/btn_4"
            android:id="@+id/btn_4"
            android:gravity="center"
            android:background="@drawable/white_selector"
            />

        <Button
           android:layout_width="80dp"
            android:layout_height="60dp"
            android:text="@string/btn_5"
            android:id="@+id/btn_5"
            android:gravity="center"
            android:background="@drawable/white_selector"
            android:layout_marginLeft="10dp"
            />

        <Button
           android:layout_width="80dp"
            android:layout_height="60dp"
            android:text="@string/btn_6"
            android:id="@+id/btn_6"
            android:gravity="center"
            android:background="@drawable/white_selector"
            android:layout_marginLeft="10dp"
            />

        <Button
           android:layout_width="70dp"
            android:layout_height="60dp"
            android:text="@string/btn_plus"
            android:id="@+id/btn_plus"
            android:gravity="center"
            android:background="@drawable/white_selector"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_below="@id/L_Row3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/L_Row4"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/L_Row4_Colum1">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                   android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:text="@string/btn_1"
                    android:id="@+id/btn_1"
                    android:gravity="center"
                    android:background="@drawable/white_selector"
                    />
                <Button
                   android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:text="@string/btn_2"
                    android:id="@+id/btn_2"
                    android:gravity="center"
                    android:background="@drawable/white_selector"
                    android:layout_marginLeft="10dp"
                     />
            </LinearLayout>
            <Button
                android:layout_width="170dp"
                android:layout_height="60dp"
                android:text="@string/btn_0"
                android:id="@+id/btn_0"
                android:gravity="center"
                android:background="@drawable/white_selector"
                android:layout_marginTop="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/L_Row4_Colum2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp">

            <Button
               android:layout_width="80dp"
                android:layout_height="60dp"
                android:text="@string/btn_3"
                android:id="@+id/btn_3"
                android:gravity="center"
                android:background="@drawable/white_selector"
                />

            <Button
               android:layout_width="80dp"
                android:layout_height="60dp"
                android:text="@string/btn_point"
                android:id="@+id/btn_point"
                android:gravity="center"
                android:background="@drawable/white_selector"
                android:layout_marginTop="10dp"
                />
        </LinearLayout>
        <Button
           android:layout_width="70dp"
            android:layout_height="130dp"
            android:text="@string/btn_equal"
            android:id="@+id/btn_equal"
            android:gravity="center"
            android:background="@drawable/orange_selector"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>
</RelativeLayout>
